--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     rel="stylesheet">
     -->
 
-    <link rel="stylesheet" href="Untitled-2.css">
+    <link rel="stylesheet" href="index_style.css">
 </head>    
 <body>
     <header>
