--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
     <section>
         <div class="flex-container">
             <div1>
+
                 <img src="C:\Users\arnol\OneDrive\Töölaud\ArnoldLuichTunnitoo_WebAp\praks4_WebAp\user.png" alt="User">
-                <div_date>Sep 18, 2020 15:16</div_date>
+
+                <p id="date1">Sep 18, 2020 15:16</p>
+
+                <!--<div_date>Sep 18, 2020 15:16</div_date>-->
 
                 <div_post_img> 
                     <img src="C:\Users\arnol\OneDrive\Töölaud\ArnoldLuichTunnitoo_WebAp\praks4_WebAp\pic1.jpg" alt="pic1">
