--- a/index.html
+++ b/index.html
@@ -29,21 +29,29 @@
             </div3>
         </nav>
     </header>
+
+
+
+
+
     <section>
+
         <div class="flex-container">
+
             <div1>
 
                 <img src="C:\Users\arnol\OneDrive\Töölaud\ArnoldLuichTunnitoo_WebAp\praks4_WebAp\user.png" alt="User">
 
-                <p id="date1">Sep 18, 2020 15:16</p>
-
-                <!--<div_date>Sep 18, 2020 15:16</div_date>-->
+                <p class = date id="date1">Sep 18, 2020 15:16</p>
 
                 <div_post_img> 
                     <img src="C:\Users\arnol\OneDrive\Töölaud\ArnoldLuichTunnitoo_WebAp\praks4_WebAp\pic1.jpg" alt="pic1">
                 </div_post_img>
 
-                <div_post>I think it´s going to rain</div_post>
+                <p class = post id="post1">
+                    <br>
+                    I think it´s going to rain
+                </p>
 
                 <div_like> 
                     <img src="C:\Users\arnol\OneDrive\Töölaud\ArnoldLuichTunnitoo_WebAp\praks4_WebAp\like.png" alt="Like">
@@ -51,9 +59,20 @@
 
             </div1>
 
+
+
+
+
             <div2>2</div2>
 
             <div3>3</div3>  
+
+
+
+
+
+
+
           </div>
 
     </section>
