picture new folder

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <div1>
-                <img src="C:\Users\arnol\OneDrive\Töölaud\ArnoldLuichTunnitoo_WebAp\praks4_WebAp\postit.jpg" alt="postIt">
+                <img src="pic\postit.jpg" alt="postIt">
             </div1>
 
             <div2>
@@ -24,7 +24,7 @@
             </div2>
 
             <div3>
-                <img src="C:\Users\arnol\OneDrive\Töölaud\ArnoldLuichTunnitoo_WebAp\praks4_WebAp\user.png" alt="User">
+                <img src="pic\user.png" alt="User">
             
             </div3>
         </nav>
@@ -40,12 +40,12 @@
 
             <div1>
 
-                <img src="C:\Users\arnol\OneDrive\Töölaud\ArnoldLuichTunnitoo_WebAp\praks4_WebAp\user.png" alt="User">
+                <img src="pic\user.png" alt="User">
 
                 <p class = date id="date1">Sep 18, 2020 15:16</p>
 
                 <div_post_img> 
-                    <img src="C:\Users\arnol\OneDrive\Töölaud\ArnoldLuichTunnitoo_WebAp\praks4_WebAp\pic1.jpg" alt="pic1">
+                    <img src="pic\pic1.jpg" alt="pic1">
                 </div_post_img>
 
                 <p class = post id="post1">
@@ -54,7 +54,7 @@
                 </p>
 
                 <div_like> 
-                    <img src="C:\Users\arnol\OneDrive\Töölaud\ArnoldLuichTunnitoo_WebAp\praks4_WebAp\like.png" alt="Like">
+                    <img src="pic\like.png" alt="Like">
                 </div_like>
 
             </div1>
