--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <title>postIt</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-    rel="stylesheet">
-    -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+
 
     <link rel="stylesheet" href="index_style.css">
 </head>    
