finished login page

--- a/login.html
+++ b/login.html
@@ -10,12 +10,20 @@
 <div class="flex-box">
     <div class="login-box">
         <div class="picture-box">
-            <img id="login-picture" src="res/img/postit.png" alt="postIt">
+            <img id="login-picture" src="pic/postit.png" alt="postIt">
         </div>
+
         <h1> Welcome to postIt!</h1>
         <p class="link"><a href="">Create an Account</a></p>
         <p>Or</p>
         <p>Please Log In</p>
+
+        <input type="text" name="email" placeholder="Email">
+        <input type="password" name="password" placeholder="Password">
+        <div class="login-container">
+            <a href="index.html"><input type="submit" name="password" value="Log In"></a>
+        </div>
+        <p class="link"><a href="">Forgot password?</a></p>
     </div>
 </div>
 
