Parandused index failis + div2 + div3 complete

--- a/index.html
+++ b/index.html
@@ -61,9 +61,34 @@
 
 
 
-            <div2>2</div2>
+            <div2>
+                <img src="pic\user.png" alt="User">
+                <p class = date id="date2">Sep 18, 2020 15:16</p>
 
-            <div3>3</div3>  
+                <p class = post id="post2">
+                    which weighs more, a pound of feather or a pound of bricks?
+                </p>
+                <div_like>
+                    <img src="pic\like.png" alt="Like">
+                </div_like>
+            </div2>
+
+            <div3><img src="pic\user.png" alt="User">
+
+                <p class = date id="date3">Sep 18, 2020 17:18</p>
+
+                <div_post_img>
+                    <img src="pic\pic3.jpg" alt="pic1">
+                </div_post_img>
+
+                <p class = post id="post3">
+                    <br>
+                    Felt cute might delete later
+                </p>
+
+                <div_like>
+                    <img src="pic\like.png" alt="Like">
+                </div_like></div3>
 
 
 
