Tasks 1 - 3 and half task4

--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <meta charset="UTF-8">
     <title>postIt</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-
-
     <link rel="stylesheet" href="index_style.css">
-</head>    
+    <script type="text/javascript" src="script.js"></script>
+</head>   
+
+
 <body>
+
     <header>
         <nav>
             <div1>
@@ -88,15 +92,14 @@
 
                 <div_like>
                     <img src="pic\like.png" alt="Like">
-                </div_like></div3>
+                </div_like>
+            </div3>
+            <dic4>
+                
+            </dic4>
 
-
-
-
-
-
-
-          </div>
+           </div>
+          
 
     </section>
 
