Completed dropdown menu with some fixes in code.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
             </div2>
 
             <div3>
-                <img src="pic\user.png" alt="User">
+                <div class="dropdown">
+                    <img src="pic\user.png" onclick="dropDownMenu()" alt="User" class="dropbtnpic">
+                    <div id="myDropdown" class="dropdown-content">
+                        <p>Don Juan</p>
+                        <p>Don.Juan@gmail.com</p>
+                    </div>
+                </div>
             
             </div3>
         </nav>
